
wxGTK:

- Fix resizing wxGLCanvas with EGL and Wayland (Carl Hetherington, #22811).
- Fix missing X11 libraries when linking with wxGTK2 statically (#22813).
- Fix compilation with GTK 3.22.z and z < 25 (#22816).
- Fix compilation with GTK < 2.21.8 (mkirkham, #22830).
- Fix display artefacts when using AUI without compositor under X11 (#23135).

wxMSW:

- Fix crashes when using wxTextCtrl with MinGW TDM 64 (#22639).
- Avoid appending extraneous NUL bytes to wxTextDataObject text (#22928).
- Improve resizing of some windows on DPI change (#23091).
- Fix wrong size of native MSW icons in wxArtProvider in high DPI (#23127).
- Fix glitch in drawing wxStaticBox with a control as label (#22952).
- Save windows geometry correctly when using Aero Snap (Randalphwa, #22730).
- Fix generating wxEVT_TEXT_ENTER in wxBitmapComboBox (#16318).
- Fix return value of wxZoomGestureEvent::GetZoomFactor() (s-murphree, #22818).
- Update top level icon resolution on DPI change (#22807).
- Fix scaling of standard MSW icons in high DPI (#23031).
- Fix menu items with custom font in high DPI (#22957).
- Remove "Printing" from title when printing to PDF (Blake-Madden, #22836).
- Fix sometimes missing overvwrite prompt in "Save" file dialog (#22898).
- Set wxUSE_TASKBARBUTTON correctly when building using configure (#22900).
- Queue wxWebViewEdge events to avoid hangs (Tobias Taschner, #23025).
- Fix getting printer information in the print dialog (Stefan Ziegler, #23068).
- Fix building samples with clang under MSYS (Maarten Bent, #23057).
- Fix memory leak when allocating command line arguments (#23081).
- Include wxrc.exe in 64-bit wxMSW MSVC dev archive too (Danny Scott, #23122).
- Don't disable wxComboBox after recreating it (Oleksandra Yushchenko, #23132).
- Fix wxJoystick::GetProductName() returning nothing (Maarten Bent, #23172).

wxOSX:

- Fix possible crash in menu item event handling (#23040).
- Generate wxEVT_DATAVIEW_COLUMN_HEADER_RIGHT_CLICK (#22833).